--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@solana/wallet-adapter-react": "^0.15.39",
     "@solana/wallet-adapter-react-ui": "^0.9.39",
     "@solana/web3.js": "^1.98.4",
+    "@supabase/supabase-js": "^2.97.0",
     "next": "14.2.35",
     "react": "^18",
     "react-dom": "^18"
